Fix BasketController substitute assignment compile error